fix spacing around messages

--- a/fractal-gtk/res/app.css
+++ b/fractal-gtk/res/app.css
@@ -42,8 +42,13 @@
     margin: 3px;
 }
 
-.username {
+row .username {
     font-weight: bold;
+    font-size: small;
+}
+
+row:not(:selected) .username {
+    color: #4a90d9
 }
 
 .room-title {
